--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -11,7 +11,21 @@
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
-
+<table class="centeredTable">
+    <tr>
+        <th:block th:each="column : ${columns}">
+            <th th:text = "${column.value}"></th>
+        </th:block>
+    </tr>
+    <tr>
+        <td th:each="job : ${jobs}">
+            <ul>
+                <li th:each="item : ${job}">
+                    <a th:href="@{/view/job(id=${job.id})}" th:text="${item}"></a>
+                </li>
+            </ul>
+        </td>
+    </tr>
 </div>
 
 </body>
